# westgate

./: .gitattributes  .gitignore  CMakeLists.txt
.github/workflows/: auto-label-new-issues.yml  build-test.yml  codeql.yml  macos-latest.yml  multi-os-ci.yml  ubuntu-latest.yml  windows-latest.yml
docs/: 3rdparty.md  README.md  message colours.md
gamedata/: lom.yml  westgate.yml
gamedata/misc/: weather.yml
gamedata/namegen/: namegen-strings.yml  names-f.txt  names-m.txt  readme.txt  surname-a.txt  surname-b.txt
gamedata/world/regions/: 0-caledonia.yml  0-sula.yml  0-westgate.yml  1-westgate.yml
src/: main.cpp  readme.md
src/actions/: cheats.cpp  cheats.hpp  meta.cpp  meta.hpp  player-interaction.cpp  player-interaction.hpp  silly.cpp  silly.hpp  world-interaction.cpp  world-interaction.hpp
src/cmake/: resource.rc.in  source.hpp.in  version.hpp.in
src/core/: core.cpp  core.hpp  game.cpp  game.hpp  global.hpp  parser.cpp  parser.hpp  pch.hpp  terminal.cpp  terminal.hpp
src/core/global/: enums.hpp  global-includes.hpp  terminal.cpp  terminal.hpp  vector2.hpp
src/enums/: gender.hpp
src/misc/: namegen.cpp
src/parser/: cheats.cpp  meta.cpp  meta.hpp  parser-macros.hpp  parser.cpp  parser.hpp  silly.cpp  silly.hpp  world-interaction.cpp  world-interaction.hpp  world.cpp  world.hpp
src/util/: binpath.cpp  binpath.hpp  filex.cpp  filex.hpp  namegen.cpp  namegen.hpp  random.hpp  strx.cpp  strx.hpp  timer.cpp  timer.hpp  vector3.hpp  yaml.cpp  yaml.hpp
src/util/file/: binpath.cpp  binpath.hpp  filereader.cpp  filereader.hpp  fileutils.cpp  fileutils.hpp  filewriter.cpp  filewriter.hpp  yaml.cpp  yaml.hpp
src/util/math/: random.hpp  vector2.hpp  vector3.hpp
src/util/system/: process.cpp  process.hpp
src/util/text/: hash.cpp  hash.hpp  namegen.cpp  namegen.hpp  stringutils.cpp  stringutils.hpp
src/world/: codex.cpp  codex.hpp  room.cpp  room.hpp  time-weather.cpp  time-weather.hpp  world.cpp  world.hpp
src/world/area/: automap.cpp  automap.hpp  link.cpp  link.hpp  region.cpp  region.hpp  room.cpp  room.hpp
src/world/entity/: entity.cpp  entity.hpp  inventory.cpp  inventory.hpp  item.cpp  item.hpp  mobile.cpp  mobile.hpp  player.cpp  player.hpp
src/world/time/: time-weather.cpp  time-weather.hpp  timing.hpp
